ci: `install` is case sensitive

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -35,7 +35,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install Dependencies
-        run: pnpm Install
+        run: pnpm install
 
       - name: Lint Code Base
         id: super-linter
