--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install Dependencies
-        run: pnpm Install
+        run: pnpm install
 
       - name: Build
         run: pnpm run bundle
