--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -36,7 +36,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install Dependencies
-        run: pnpm Install
+        run: pnpm install
 
       - name: Build
         run: pnpm run bundle
