--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,19 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - uses: oven-sh/setup-bun@v1
         with:
-          version: latest
+          bun-version: latest
       
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          cache: "pnpm"
-
       - name: Install Dependencies
-        run: pnpm install
+        run: bun install
 
       - name: Build
-        run: pnpm run bundle
+        run: bun run bundle
