ci: this project doesn't need to use `RELEASE_TOKEN`.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
-          token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+          token: ${{ github.token }}
           package-name: "init-beatsaber"
           release-type: node
 
