--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,18 @@ jobs:
 
       - name: Build
         run: bun run bundle
+
+      - name: Check for uncommitted changes in dist/
+        id: diff
+        run: |
+          if [ "$(git diff --ignore-space-at-eol --text dist/ | wc -l)" -gt "0" ]; then
+            echo "Detected uncommitted changes after build. See status below:"
+            git diff --ignore-space-at-eol --text dist/
+            exit 1
+          fi
+
+      - uses: actions/upload-artifact@v3
+        if: ${{ failure() && steps.diff.conclusion == 'failure' }}
+        with:
+          name: dist
+          path: dist/
