--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,12 +40,13 @@ jobs:
         run: |
           bun run bundle
 
-      - name: Commit bundled files
+      - name: Commit and push bundled files
         run: |
           git config --global user.email "ci@beatforge.net"
           git config --global user.name "BeatForge CI"
           git add .
-          git commit -m "chore: update dist files"
+          git commit -m "chore: bundle"
+          git push
 
       - uses: google-github-actions/release-please-action@v3
         id: release
