--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -1,10 +1,8 @@
 name: Bundle Update
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  - push
+  - pull_request
 
 permissions:
   contents: write
