--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -1,8 +1,10 @@
 name: Bundle Update
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - main
+  pull_request:
 
 permissions:
   contents: write
@@ -27,22 +29,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bun-
 
-      - uses: oven-sh/setup-bun@v1
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
       - name: Install dependencies
-        run: |
-          bun install
+        run: bun install
 
       - name: Bundle with Bun
-        run: |
-          bun run bundle
+        run: bun run bundle
 
       - name: Commit and push bundled files
         run: |
           git config --global user.email "ci@beatforge.net"
           git config --global user.name "BeatForge CI"
           git add .
-          git commit -m "chore: bundle"
+          git diff-index --quiet HEAD || git commit -m "chore: bundle"
           git push
