--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 permissions:
   contents: write
@@ -12,6 +16,7 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -28,50 +33,54 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bun-
 
-      - uses: oven-sh/setup-bun@v1
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
       - name: Install dependencies
+        run: bun install
+
+      - name: Run bundle
+        run: bun run bundle
+
+      - name: Commit bundle results
+        if: github.event_name == 'pull_request'
         run: |
-          bun install
+          git config --global user.email "ci@beatforge.net"
+          git config --global user.name "BeatForge CI"
+          git add .
+          git commit -m "chore: bundle update"
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
 
-      - name: Trigger Bundle Update
-        uses: actions/github-script@v6
-        with:
-          script: |
-            await github.actions.createWorkflowDispatch({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              workflow_id: 'Bundle Update.yml',
-              ref: context.ref
-            });
-
-      - name: Wait for Bundle Update
-        uses: jakejarvis/wait-action@v1
-        with:
-          workflow: "Bundle Update"
-          ref: ${{ github.sha }}
-          repo: ${{ github.repository }}
-
-      - uses: google-github-actions/release-please-action@v3
+      - name: Release Please
+        uses: google-github-actions/release-please-action@v3
         id: release
+        if: github.event_name == 'push'
         with:
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
           package-name: "init-beatsaber"
           release-type: node
 
       - name: Tag and push subversions
-        if: ${{ steps.release.outputs.releases_created }}
+        if: github.event_name == 'push' && steps.release.outputs.releases_created
         run: |
           git config --global user.email "ci@beatforge.net"
           git config --global user.name "BeatForge CI"
           git fetch --tags
+
+          # Delete local tags if they exist
           git tag -d v${{ steps.release.outputs.major }} || true
           git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+
+          # Delete remote tags if they exist
           git push origin :v${{ steps.release.outputs.major }} || true
           git push origin :v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+
+          # Create new tags
           git tag -a v${{ steps.release.outputs.major }} -m "Release v${{ steps.release.outputs.major }}"
           git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
+
+          # Push new tags
           git push origin v${{ steps.release.outputs.major }}
           git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
