fix: major refactors and fixes to error handling. should improve general reliability of this action in many different circumstances.

--- a/action.yml
+++ b/action.yml
@@ -9,20 +9,23 @@ branding:
 inputs:
   token:
     description: "The GitHub token to use for downloading the modding environment"
-    default: ${{ github.token }}
+    default: "${{ github.token }}"
     required: false
   version:
-    description: "The BeatSaber version to use"
-    required: true
+    description: "The Beat Saber version to use. Optional if 'ref' is provided or can be inferred from manifest.json."
+    required: false
+  ref:
+    description: "The Git reference to download (branch, tag, or commit SHA). Overrides the 'version' input if provided."
+    required: false
   manifest:
-    description: "The path to the manifest.json file to infer version if not specified"
+    description: "The path to the manifest.json file to infer version if 'version' is not specified"
     required: false
   path:
-    description: "The location to install the modding environment to, defaults to ./Refs"
+    description: "The location to install the modding environment to"
     required: false
     default: "./Refs"
   host:
-    description: "The GitHub host to use, defaults to github.com"
+    description: "The GitHub host to use"
     required: false
     default: "github.com"
   repo:
@@ -31,5 +34,5 @@ inputs:
     required: false
 
 runs:
-  using: node20
-  main: dist/index.js
+  using: "node20"
+  main: "dist/index.js"
